[package]
name = "egui-multiselect"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/frankvgompel/egui-multiselect"
authors = ["Frank van Gompel"]
readme = "README.md"
description = "Multiselect widget for Egui"
keywords = ["graphics", "egui", "widget", "gui"]
categories = ["gui", "graphics"]
exclude = ["examples", "media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.28", default-features = false }
egui = "0.28"
egui_extras = { version = "0.28", features = ["svg"] }
